tls-dp.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: tls-dashboard
  namespace: devops
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tls-dashboard
        tier: frontend
    spec:
      volumes:
      - name: staticfile
        nfs: 
          server: 192.168.10.245
          path: /data
          readOnly: false
      containers:
      - name: nginx
        image: nginx:1.12
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: staticfile
          mountPath: /usr/share/nginx/html
        ports:
        - name: http
          containerPort: 80
      - name: tlschecker
        image: bluerdocker/tls-dashboard:v6
        volumeMounts:
        - name: staticfile
          mountPath: /pod-data
