ingress-tls-rule.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:                                                                                                                               
  name: ingress-tls
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: tlschecker.xsllab.com
    http:
      paths:
      - path:
        backend:
          serviceName: tls-service
          servicePort: 80
